fixed package steaming text alignment issue

--- a/web-frontend/src/app/admin/package/package-steam/steam/package-steam.component.scss
+++ b/web-frontend/src/app/admin/package/package-steam/steam/package-steam.component.scss
@@ -16,7 +16,7 @@ td div {
 
 ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary
  {
-    padding-left: 5px !important; 
+    padding-left: 0px !important; 
     /* padding-right: 12px; */
 }
 
@@ -65,17 +65,17 @@ mat-chip-row[color="primary"] button[matChipRemove] mat-icon {
   flex-shrink: 0;
 }
 
-.horizontal-container {
-  display: flex;
-  align-items: flex-start;
-}
+// .horizontal-container {
+//   display: flex;
+//   align-items: flex-start;
+// }
 
-/* Ensure text wraps properly */
-.option-text {
-  margin-top: 4px;
-  white-space: normal;    /* Allow text wrapping */
-  line-height: 1.5;       /* Improve readability */
-}
+// /* Ensure text wraps properly */
+// .option-text {
+//   margin-top: 4px;
+//   white-space: normal;    /* Allow text wrapping */
+//   line-height: 1.5;       /* Improve readability */
+// }
 
 ::ng-deep .mat-pseudo-checkbox-minimal.mat-pseudo-checkbox-checked::after {
  display:none
